[package]
name = "ryu"
version = "1.0.10" # don't forget to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "Apache-2.0 OR BSL-1.0"
description = "Fast floating point to string conversion"
repository = "https://github.com/dtolnay/ryu"
documentation = "https://docs.rs/ryu"
categories = ["value-formatting"]
readme = "README.md"
exclude = ["performance.png", "chart/**"]
edition = "2018"
rust-version = "1.36"

[features]
# Use smaller lookup tables. Instead of storing every required power of
# 5, only store every 26th entry, and compute intermediate values with a
# multiplication. This reduces the lookup table size by about 10x (only
# one case, and only f64) at the cost of some performance.
small = []

[dependencies]
no-panic = { version = "0.1", optional = true }

[dev-dependencies]
num_cpus = "1.8"
rand = "0.8"
rand_xorshift = "0.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
