[package]
name = "ryu-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
ryu = { path = ".." }

[features]
small = ["ryu/small"]

[[bin]]
name = "fuzz_ryu"
path = "fuzz_targets/fuzz_ryu.rs"
test = false
doc = false

[workspace]
